--- a/index.html
+++ b/index.html
@@ -13,6 +13,63 @@
 </head>
 
 <body>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">CourseConnect</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--hero content-->
+    <div class="my">
+        <div class="p-5 text-center bg-body-tertiary jumbotron">
+            <div class="container py-5">
+                <h1 class="text-body-emphasis">Welcome to CourseConnect!</h1>
+                <p class="col-lg-8 mx-auto lead">
+                    Connecting You to Learning Opportunities
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!--form for submission-->
+    <div class="main-form">
+        <div class="form-container">
+            <!--name-->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="inputGroup-sizing-default">Name:</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Name">
+            </div>
+            <!--email address input-->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="inputGroup-sizing-default">Email:</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Email">
+            </div>
+            <!--credit/debit card info-->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="inputGroup-sizing-default">Card:</span>
+                <input type="text" class="form-control" aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-default" placeholder="Enter a Proxy Credit Card Number">
+            </div>
+            <button class="btn btn-primary form-submit" type="button">Submit</button>
+        </div>
+    </div>
 
     <!-- Your content here -->
 
