trying to figure out validating card info

--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
             <!--name-->
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Name:</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="nameInput" type="text" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Name">
             </div>
             <!--email address input-->
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Email:</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="emailInput" type="text" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Email">
             </div>
             <!--credit/debit card info-->
             <div class="input-group mb-3">
                 <span class="input-group-text" id="inputGroup-sizing-default">Card:</span>
-                <input type="text" class="form-control" aria-label="Sizing example input"
+                <input id="cardInput" type="text" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter a Proxy Credit Card Number">
             </div>
-            <button class="btn btn-primary form-submit" type="button">Submit</button>
+            <button id="submitButton" class="btn btn-primary form-submit" type="button">Submit</button>
         </div>
     </div>
 
