fixed card verification

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">CourseConnect</a>
+            <a class="navbar-brand">CourseConnect</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -68,6 +68,19 @@
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter a Proxy Credit Card Number">
             </div>
             <button id="submitButton" class="btn btn-primary form-submit" type="button">Submit</button>
+        </div>
+    </div>
+
+    <!--contact section-->
+    <div class="my">
+        <div class="p-5 text-center bg-body-tertiary jumbotron">
+            <div class="container">
+                <h1 class="text-body-emphasis" id="contact">Contact</h1>
+                <p class="col-lg-8 mx-auto lead">
+                    Questions?<br>
+                    Contact us at ask@courseconnect.com
+                </p>
+            </div>
         </div>
     </div>
 
