--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
         <div class="form-container">
             <!--name-->
             <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Name:</span>
-                <input id="nameInput" type="text" class="form-control" aria-label="Sizing example input"
+                <label for="nameInput" class="input-group-text">Name:</label>
+                <input id="nameInput" type="text" type="name" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Name">
             </div>
             <!--email address input-->
             <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Email:</span>
-                <input id="emailInput" type="text" class="form-control" aria-label="Sizing example input"
+                <label for="emailInput" class="input-group-text">Email:</label>
+                <input id="emailInput" type="text" type="email" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter Your Email">
             </div>
             <!--credit/debit card info-->
             <div class="input-group mb-3">
-                <span class="input-group-text" id="inputGroup-sizing-default">Card:</span>
-                <input id="cardInput" type="text" class="form-control" aria-label="Sizing example input"
+                <label for="cardInput" class="input-group-text">Card:</label>
+                <input id="cardInput" type="text" type="creditCard" class="form-control" aria-label="Sizing example input"
                     aria-describedby="inputGroup-sizing-default" placeholder="Enter a Proxy Credit Card Number">
             </div>
             <button id="submitButton" class="btn btn-primary form-submit" type="button">Submit</button>
